--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 02 15:26:21 CST 2021
-sdk.dir=C\:\\Users\\LAB1223\\AppData\\Local\\Android\\Sdk
+#Sat Mar 06 23:09:59 CST 2021
+sdk.dir=C\:\\Users\\beenson\\AppData\\Local\\Android\\Sdk
