--- a/108590005_HW6_2/app/src/main/AndroidManifest.xml
+++ b/108590005_HW6_2/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.droidcafe">
+    package="com.example.android.droidcafeoptions">
 
     <application
         android:allowBackup="true"
@@ -26,9 +26,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.android.droidcafeoptions.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".OrderActivity" />
     </application>
 
 </manifest>
