--- a/108590005_HW6_2/gradle/wrapper/gradle-wrapper.properties
+++ b/108590005_HW6_2/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Apr 05 21:35:34 CST 2021
+#Mon Jan 08 16:24:18 PST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
