--- a/108590005_HW8_2/local.properties
+++ b/108590005_HW8_2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 27 16:57:35 CST 2021
-sdk.dir=C\:\\Users\\LAB1223\\AppData\\Local\\Android\\Sdk
+#Sun May 02 17:30:41 CST 2021
+sdk.dir=C\:\\Users\\beenson\\AppData\\Local\\Android\\Sdk
