--- a/108590005_HW10_1/local.properties
+++ b/108590005_HW10_1/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 11 15:30:58 CST 2021
-sdk.dir=C\:\\Users\\LAB1223\\AppData\\Local\\Android\\Sdk
+#Sun May 16 22:19:17 CST 2021
+sdk.dir=C\:\\Users\\beenson\\AppData\\Local\\Android\\Sdk
